Last tests before launching

--- a/html/meta.html
+++ b/html/meta.html
@@ -4,5 +4,17 @@
 <meta name="keywords" lang="fr" content="" />
 <meta name="author" content="Maxime Jumelle" />
 <meta name="copyright" content="Copyright 2016" />
-
 <link rel="stylesheet" media="screen" type="text/css" title="Design" href="styles/style_main.css" />
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-92941220-16"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-92941220-16');
+</script>
+
+<!-- Start of  Zendesk Widget script -->
+<script id="ze-snippet" src="https://static.zdassets.com/ekr/snippet.js?key=174b3d72-7928-40d5-87e9-e9318c29f92e"> </script>
+<!-- End of  Zendesk Widget script -->
